tests/operator/not_struct.rz
struct Bar {}
print !Bar    // error: unary operator '!' can only be used on 'bool' type